--- a/html/index.html
+++ b/html/index.html
@@ -224,6 +224,7 @@
                             <div class="col-md-3 col-sm-4 col-xs-6 pull-right">
                                 <div class="pull-right"><div class="calendar"></div>
                                 </div>
+                                <button onclick="a18"></button>
                             </div>
                             <h3 class="box-title">Recent Data</h3>
                             <div class="table-responsive">
@@ -464,9 +465,13 @@
         get();
        
 
+        $('.calendar').pignoseCalendar({modal:true});
 
+        
 
-        $('.calendar').pignoseCalendar({
+        function a18(){
+            $('.calendar').pignoseCalendar({
+            modal:true,
             apply: function(date, context) {
                 var $this = $(this);
                 var $element = context.element;
@@ -474,6 +479,7 @@
                 console.log(date[0], date[1]);
             }
         });
+        }
     </script>
 </body>
 
