날짜에 0패딩 추가

--- a/html/index.html
+++ b/html/index.html
@@ -498,6 +498,12 @@
                 $("#dwedewdwewe").text(yyyymmdd);
             }
         });
+        function lpad0(f){
+            if(f<10){
+                return "0"+f;
+            }
+            return f;
+        }
     </script>
 </body>
 
