서버요청 날짜 형식 변경 YYYY-MM-DD  -> YYYYMMDD

--- a/html/index.html
+++ b/html/index.html
@@ -494,7 +494,8 @@
             var mm = d.getMonth()+1;
             var dd = d.getDate();
             var yyyymmdd = yyyy+"-"+mm+"-"+dd;
-                getlist(altid,yyyymmdd);
+            var yyyymmdd1 = yyyy+""+mm+"4-"+dd;
+                getlist(altid,yyyymmdd1);
                 $("#dwedewdwewe").text(yyyymmdd);
             }
         });
